# cistella

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md
backend/src/: main.rs
backend/src/model/: mod.rs
backend/src/security/: mod.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/content/: Content.css  Content.js  Content.test.js
frontend/src/content/shoppinglist/: ShoppingList.css  ShoppingList.js  ShoppingList.test.js  ShoppingListItem.css  ShoppingListItem.js
frontend/src/content/sidebar/: Sidebar.css  Sidebar.js  SidebarEntry.css  SidebarEntry.js  SidebarEntry.test.js
frontend/src/footer/: Footer.css  Footer.js
frontend/src/header/: Header.css  Header.js
src/: main.rs
src/controller/: mod.rs
src/database/: mod.rs
src/model/: mod.rs
