[package]
name = "cistella"
version = "0.1.0"
authors = ["Ferran"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
redis = "0.8.0"
dotenv_codegen = "0.11.0"
serde_json = "1.0.13"
serde_derive = "1.0.33"
serde = "1.0.33"
log = "0.4"

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["json"]